kubernetes/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: food-delivery-ingress
  namespace: devops-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: traefik

  rules:
    - host: food-delivery.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
